[workspace]

	members = [

		"ekke_core"               ,
		"ekke_io"                 ,
		"ekke_config"             ,
		"ekke_merge"              ,
		"ekke_merge_derive"       ,

		#"apps/filebrowser"       ,
		"apps/main/main_backend"  ,
		"apps/main/main_frontend" ,
		"apps/systemd"            ,
	]
